Modified Swagger
-Modified Swagger Annotations to use Api key with the JWT
